--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </nav>
 
               <div class="d-flex">
-                <h1>TV Shows</h1>
+                <h1 class="mb-4">TV Shows</h1>
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Genres
@@ -61,7 +61,7 @@
                   </ul>
                 </div>
                 <div class="d-flex ms-auto"> 
-                    <a class="nav-link" href="#"><ion-icon name="menu-sharp" class="icona"></ion-icon></a>
+                    <a class="nav-link" href="#"><ion-icon name="menu-sharp" class="icona me-4"></ion-icon></a>
                     <a class="nav-link" href="#"><ion-icon name="grid-sharp" class="icona"></ion-icon></a>
                 </div>
               </div>
